// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmUninstall should match a snapshot when FORMSTATE is PENDING 1`] = `
<Fragment>
  <Component
    afterClose={[MockFunction]}
    title="Confirm Uninstall"
  />
  <Component
    body={
      <React.Fragment>
        <Unknown>
          Are you sure you wish to uninstall ‘
          1
          ’ from ‘
          DXX
          ’?
        </Unknown>
        <Unknown
          id="terminatedReason"
          labelText="Please confirm reason for uninstalling"
          name="terminatedReason"
        />
      </React.Fragment>
    }
  />
  <Component
    footerItems={
      <React.Fragment>
        <Unknown
          className="mx-4"
          disabled={false}
          fullWidth={true}
          loading={false}
          onClick={[MockFunction]}
          type="button"
          variant="primary"
        >
          Yes, Uninstall
        </Unknown>
        <Unknown
          className="mx-4"
          disabled={false}
          fullWidth={true}
          onClick={[MockFunction]}
          type="button"
          variant="danger"
        >
          Cancel
        </Unknown>
      </React.Fragment>
    }
  />
</Fragment>
`;

exports[`ConfirmUninstall should match a snapshot when FORMSTATE is SUBMITTING 1`] = `
<Fragment>
  <Component
    afterClose={[MockFunction]}
    title="Confirm Uninstall"
  />
  <Component
    body={
      <React.Fragment>
        <Unknown>
          Are you sure you wish to uninstall ‘
          1
          ’ from ‘
          DXX
          ’?
        </Unknown>
        <Unknown
          id="terminatedReason"
          labelText="Please confirm reason for uninstalling"
          name="terminatedReason"
        />
      </React.Fragment>
    }
  />
  <Component
    footerItems={
      <React.Fragment>
        <Unknown
          className="mx-4"
          disabled={true}
          fullWidth={true}
          loading={true}
          onClick={[MockFunction]}
          type="button"
          variant="primary"
        >
          Yes, Uninstall
        </Unknown>
        <Unknown
          className="mx-4"
          disabled={true}
          fullWidth={true}
          onClick={[MockFunction]}
          type="button"
          variant="danger"
        >
          Cancel
        </Unknown>
      </React.Fragment>
    }
  />
</Fragment>
`;

exports[`ConfirmUninstall should match a snapshot when FORMSTATE is SUCCESS 1`] = `
<CallToAction
  buttonText="Back to List"
  dataTest="alertUninstallSuccess"
  isCenter={true}
  onButtonClick={[Function]}
  title="Success"
>
  <div
    className="mb-3"
  >
    ‘
    1
    ’ has been successfully uninstalled from ‘
    DXX
    ’
  </div>
</CallToAction>
`;
